# avito

./: db.sqlite3  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_description.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py  selection.py
avito/: settings.py  urls.py
data/: ad.json  ads.json  csv_to_json.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
